tests/spec/emit/snapshots/implicit_coercion_in_function_argument.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  struct Doubler {}
  
  impl Doubler {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  fn consume(r: io.Reader) {
    let _ = r
  }
  
  fn main() {
    let d = Doubler {}
    consume(d)
  }
---
package main

import "io"

type Doubler struct{}

func (d Doubler) Read(_ []uint8) (int, error) {
	return 0, nil
}

func consume(r io.Reader) {
	_ = r
}

func main() {
	d := Doubler{}
	consume(d)
}
