tests/spec/emit/snapshots/import_alias_named_like_a_reserved_package_is_kept_as_written.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import documentation "go:strings"
  
  fn test() -> string {
    documentation.ToUpper("a")
  }
---
package main

import documentation "strings"

func test() string {
	return documentation.ToUpper("a")
}
