tests/spec/emit/snapshots/import_blank.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import _ "go:os"
  import "go:fmt"
  
  fn test() {
    let _ = fmt.Print("Blank import");
  }
---
package main

import (
	"fmt"
	_ "os"
)

func test() {
	fmt.Print("Blank import")
}
