tests/spec/emit/snapshots/import_deep_nested.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "internal/services/auth"
  import "go:fmt"
  
  fn test() {
    fmt.Print("Deep nested import")
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Deep nested import")
}
