tests/spec/emit/snapshots/import_filter_handles_apostrophe_in_doc_comments.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:fmt"
  import "go:example.com/lib"
  
  /// Doesn't do much.
  pub fn first() {
    fmt.Println(lib.Value)
  }
  
  /// Doesn't do much either.
  pub fn second() {
    fmt.Println("done")
  }
---
package main

import (
	"example.com/lib"
	"fmt"
)

// Doesn't do much.
func First() {
	fmt.Println(lib.Value)
}

// Doesn't do much either.
func Second() {
	fmt.Println("done")
}
