tests/spec/emit/snapshots/import_filter_ignores_package_alias_in_string_literal.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:fmt"
  import "go:example.com/lib"
  
  fn test() {
    let s: lib.IntSlice = [1]
    fmt.Println("lib.", s[0])
  }
---
package main

import "fmt"

func test() {
	s := []int{1}
	fmt.Println("lib.", s[0])
}
