tests/spec/emit/snapshots/import_local_with_alias.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import h "utils/helpers"
  import "go:fmt"
  
  fn test() {
    fmt.Print("Local package with alias")
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Local package with alias")
}
