tests/spec/emit/snapshots/import_named_alias.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import router "go:github.com/gorilla/mux"
  import "go:fmt"
  
  fn test() {
    fmt.Print("Named alias import")
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Named alias import")
}
