tests/spec/emit/snapshots/import_order_preserved.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "services/billing"
  import "services/auth"
  import "services/notifications"
  import "go:fmt"
  
  fn test() {
    fmt.Print("Import order test")
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Import order test")
}
